# ros_custom_message_template

custom_msg_test/: package.xml  setup.cfg  setup.py
custom_msg_test/custom_msg_test/: publisher.py
mt_arm_interfaces/msg/: ArmJoints.msg
